# Greek_morphology_quiz

./: .gitignore  Cargo.toml  Dioxus.toml  README-ANDROID.md  README.md
.github/workflows/: gh-pages.yml
assets/: greek_morphology.sqlite3
assets/icons/ios/AppIcon.appiconset/: Contents.json
scripts/: android-release.zsh
src/: app.rs  db.rs  db_sqlite.rs  main.rs  models.rs  paradigm.rs  quiz.rs
