[package]
name = "morph_app"
version = "0.1.0"
edition = "2024"
default-run = "morph_app"

[dependencies]
dioxus = { version = "0.7.3", features = ["desktop", "mobile"] }
dioxus-desktop = "0.7.3"
anyhow = "1"
rand = "0.9"
rusqlite = { version = "0.33", features = ["bundled"] }
unicode-normalization = "0.1.25"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
image = { version = "0.25", default-features = false, features = ["png"] }

