[package]
name = "morph_app"
version = "0.1.0"
edition = "2024"
default-run = "morph_app"

[dependencies]
dioxus = { version = "0.7.3", features = ["web"] }
anyhow = "1"
rand = "0.9"
unicode-normalization = "0.1.25"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dioxus-desktop = "0.7.3"
rusqlite = { version = "0.33", features = ["bundled"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3.4", features = ["wasm_js"] }
web-sys = { version = "0.3.82", features = ["Storage", "Window"] }

